[pom] Remove argLine add opens as not needed here